# arrow-mmap

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  pixi.toml  taplo.toml  toolchain-clang.cmake
.pixi/: config.toml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_mmap_db.cpp  benchmark_read.cpp
demo/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  load.py  main.cpp  pd_load.py  pl_load.py
examples/: CMakeLists.txt
examples/arrow_capsule/: CMakeLists.txt  lib.cpp
examples/ipc_read/: .gitignore  CMakeLists.txt  demo.py  dump.cpp
examples/nanoarrow_reader/: CMakeLists.txt  main.cpp
src/: main.cpp
src/arrow_mmap/: arrow_manager.cpp  arrow_manager.hpp  arrow_meta.cpp  arrow_meta.hpp  arrow_reader.cpp  arrow_reader.hpp  arrow_writer.cpp  arrow_writer.hpp  interface.hpp  manager.cpp  manager.hpp
src/mmap/: arrow_db.hpp  dyn_partition_db.hpp  manager.hpp  nanoarrow_db.hpp  partition_db.hpp
src/mmap_arrow/: arrow_manager.cpp  arrow_manager.hpp  arrow_meta.cpp  arrow_reader.cpp  arrow_reader.hpp  arrow_writer.cpp  arrow_writer.hpp  core.cpp  core.hpp  interface.hpp  manager.cpp  manager.hpp  mmap_interface.hpp  mmap_manager.cpp  mmap_manager.hpp
